Añadido contenido al fichero datasetRequirements.html

--- a/HandsOn/Group09/requirements/datasetRequirements.html
+++ b/HandsOn/Group09/requirements/datasetRequirements.html
@@ -1,27 +1,36 @@
-2010-2014 SO2 Daily Summary ConcentrationsVirginia-Beach-Norfolk-Newport News.csv
-
-R1 -> Satisfies
-R2 -> Satisfies
-R3 -> ??
-R4 -> Satisfies
-R5 -> ??
-R6 -> ??
-
-ahs.csv
-
-R1 -> Satisfies
-R2 -> Satisfies
-R3 -> ??
-R4 -> Satisfies
-R5 -> ??
-R6 -> ??
-
-Strategické projekty.csv
-
-R1 -> Satisfies
-R2 -> Satisfies
-R3 -> ??
-R4 -> Satisfies
-R5 -> ??
-R6 -> ??
-
+<html>
+	<head>
+		<title>Dataset Requirements</title>
+	</head>
+	<body>
+    	<p>
+	Does the dataset that satisfy the following requirements?
+		R1. Data are in the smart cities domain.
+		R2. Data are available as a CSV file.
+		R3. Data have an open license so it can be published.
+		R4. Data can be easily linked with generic real-world entities (e.g., locations).
+		R5. Documentation exists for the data (optional).
+		R6. Data can come from multiple data sources (optional).
+	</p>
+			
+	<p>
+	TODO: Csv file 1
+	1) 
+	2) 
+	3) 
+	4) 
+	5) 
+	6) 
+	</p>
+	
+	<p>
+	TODO: Csv file n
+	1) 
+	2)
+	3)
+	4)
+	5)
+	6)
+	</p>				
+  </body>
+</html>
