Modificado el fichero

--- a/HandsOn/Group09/requirements/applicationRequirements.html
+++ b/HandsOn/Group09/requirements/applicationRequirements.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<h1>Application requirements</h1>
-		<p>Esta aplicación va a obtener información sobre la polucion de las diferentes ciudades y va a obtener un nivel de 
-		alerta similares a los del protocolo de contaminación de Madird.</p>
+		<p>Esta aplicación va a obtener información sobre el tráfico de las diferentes ciudades y va a obtener un nivel de 
+		alerta de polución similares a los del protocolo de contaminación de Madrid.</p>
 		<p>Para la aplicación de los distintos protocolos se tomarán los valores reales, pero los umbrales de polución se determinarán
 sobre la marcha</p>
 		<ul>
