--- a/HandsOn/Group12/requirements/applicationRequirements.html
+++ b/HandsOn/Group12/requirements/applicationRequirements.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>datasetRequirements.html</title>
+    <title>applicationRequirements.html</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icono" type="image/png" href="https://s19.postimg.org/c6lnsm783/logo_OEG-150.png" />
+    <link rel="icon" type="image/png" href="https://s19.postimg.org/c6lnsm783/logo_OEG-150.png" />
   </head>
   <body style="background-color:#B9C6F1;">
-
+    Aplicación para el servicio de transporte público de autobuses de la ciudad de Alcobendas.
+    <br></br>
+    Requisitos de la app.<br></br>
+    La app proporcionará servicios acerca de la siguiente información sobre los autobuses:<br></br>
+    -Calendario de los servicios de autobuses relacionadas con Alcobendas.<br></br>
+    -Rutas de autobuses relacionadas con Alcobendas.<br></br>
+    -Horarios de las paradas de autobuses relacionadas con Alcobendas.<br></br>
+    -Servicios de las rutas de autobuses relacionadas con Alcobendas.<br></br>
+    -Datos de las paradas de autobuses relacionadas con Alcobendas.<br></br>
+    -Excepciones del calendario de los servicios de autobuses relacionadas con Alcobendas.<br></br>
+    
 
   </body>
 </html>
