--- a/HandsOn/Group12/requirements/datasetRequirements.html
+++ b/HandsOn/Group12/requirements/datasetRequirements.html
@@ -3,7 +3,7 @@
   <head>
     <title>datasetRequirements.html</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icono" type="image/png" href="https://s19.postimg.org/c6lnsm783/logo_OEG-150.png" />
+    <link rel="icon" type="image/png" href="https://s19.postimg.org/c6lnsm783/logo_OEG-150.png" />
   </head>
   <style> 
     
@@ -70,7 +70,7 @@
     <tr>
       <td>R6</td>
       <td>Data can come from multiple data sources (optional).</td>
-      <td>Yes</td>
+      <td> </td>
     </tr>
   </table>
 
