Algunas erratas corregidas

--- a/HandsOn/Group12/requirements/applicationRequirements.html
+++ b/HandsOn/Group12/requirements/applicationRequirements.html
@@ -10,10 +10,10 @@
     
     <h1 style="font-size:150%;">Requisitos de la aplicación</h1>
     La app proporcionará servicios acerca de la siguiente información sobre los autobuses:<br></br>
-    <li type="circle">Calendario de los servicios de autobuses relacionadas con Alcobendas.</li>
+    <li type="circle">Calendario de los servicios de autobuses relacionados con Alcobendas.</li>
     <li type="circle">Rutas de autobuses relacionadas con Alcobendas.</li>
     <li type="circle">Horarios de las paradas de autobuses relacionadas con Alcobendas.</li>
-    <li type="circle">Servicios de las rutas de autobuses relacionadas con Alcobendas.</li>
+    <li type="circle">Servicios de las rutas de autobuses relacionados con Alcobendas.</li>
     <li type="circle">Datos de las paradas de autobuses relacionadas con Alcobendas.</li>
    <li type="circle">Excepciones del calendario de los servicios de autobuses relacionadas con Alcobendas.</li>
    <br></br>
