--- a/HandsOn/Group18/requirements/datasetRequirements.html
+++ b/HandsOn/Group18/requirements/datasetRequirements.html
@@ -4,6 +4,36 @@
 	<title>Dataset Requirements</title>
 </head>
 <body>
-
+El dataset elegido es de la ciudad de Bruselas, en concreto de los parkings públicos de coches.
+Los datos han sido extraidos de http://opendatastore.brussels/dataset/publicparkings.
+	
+	R1: Bruselas es una smart city, y lleva ya varios años desarollando tecnologías para poder
+	ir ampliando su potencial. Podemos ver información de esta ciudad en concreto en la 
+	siguiente página web: https://smartcity.brussels
+	
+	R2: Gracias a http://opendatastore.brussels/ hemos podido encontrar varios documentos 
+	en formato CSV, incluido el que hemos elegido.
+	
+	R3: La licencia de estos datasets y otra información al respecto la hemos encontrado en
+	dos páginas distintas:
+	https://opendata.stib-mivb.be/store/license
+	http://opendatastore.brussels/en/about#opendata
+	(licencia en francés: http://cirb.brussels/fr/nos-solutions/urbis-solutions/licence-urbis-open-data)
+	
+	R4: Los datos están distribuidos en columnas con nombres un tanto confusos de primeras, 
+	como son 'FID', 'cp' y 'wkb_geometry', pero que una vez miramos los datos y el contexto,
+	lo entendemos mejor (en este caso serán los IDs, la capacidad de los parkings y las 
+	coordenadas de los lugares)
+	
+	R5: Por desgracia, no hemos encontrado muycha más documentación acerca de los datos, a 
+	parte de otros documentos usados para transformar los datos.
+	
+	R6: No hemos tomado otros data sources para este ejercicio, pero igual nos podría ser de
+	ayuda los datos mencionados en el R5. (aunque son archivos en .json)
+	
+En conclusión, el dataset tiene bastante potencial, ya que incluye datos numéricos, en texto, coordenadas
+y los datos en varios idiomas al mismo tiempo, lo cual nos puede facilitar mucho la unión del dataset a
+otros con similares características.
+	
 </body>
 </html>
