--- a/HandsOn/Group13/requirements/applicationRequirements.html
+++ b/HandsOn/Group13/requirements/applicationRequirements.html
@@ -1,2 +1,6 @@
-
-
+<HTML><HEAD><TITLE>Requerimientos de aplicacion</TITLE></HEAD>
+  <BODY>
+    <P>
+      Nombres de vías de Palmas de Gran Canaria
+      Con estos datos se podría hacer una aplicación que listase todas las calles de la ciudad. Podría utilizarse para ayudar a autocompletar en un sistema como Google Maps al trabajar desde Gran Canaria.
+    </P>
