--- a/HandsOn/Group13/requirements/applicationRequirements.html
+++ b/HandsOn/Group13/requirements/applicationRequirements.html
@@ -1,6 +1,5 @@
 <HTML><HEAD><TITLE>Requerimientos de aplicacion</TITLE></HEAD>
   <BODY>
     <P>
-      Nombres de vías de Palmas de Gran Canaria
-      Con estos datos se podría hacer una aplicación que listase todas las calles de la ciudad. Podría utilizarse para ayudar a autocompletar en un sistema como Google Maps al trabajar desde Gran Canaria.
+      Disponiendo de una agenda de eventos, un listado de colegios de Madrid y otro de centros culturales, se haría una aplicación que registrase eventos en la agenda programados por los colegios, y añadiría a cada evento el colegio que lo solicita y el centro cultural en el que se realiza. Se estimarían unos 200 alumnos por representación y las fechas se asignarían aleatoriamente.
     </P>
