--- a/HandsOn/Group21/datasetRequirements.html
+++ b/HandsOn/Group21/datasetRequirements.html
@@ -2,20 +2,133 @@
 <html>
 <body>
 
+<h3>Dataset Requirements Comparison</h3>
+<table width="1079" height="302" border="1">
+  <tr>
+    <td><strong>Dataset</strong></td>
+    <td><strong>R1</strong></td>
+    <td><strong>R2</strong></td>
+    <td><strong>R3</strong></td>
+    <td><strong>R4</strong></td>
+    <td><strong>R5</strong></td>
+    <td><strong>R6</strong></td>
+  </tr>
+  <tr>
+    <td><a href="http://datos.madrid.es/portal/site/egob/menuitem.c05c1f754a33a9fbe4b2e4b284f1a5a0/?vgnextoid=aecb88a7e2b73410VgnVCM2000000c205a0aRCRD&vgnextchannel=374512b9ace9f310VgnVCM100000171f5a0aRCRD">Calidad del aire: Datos diarios años 2001 a 2017</a></td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td><a href="http://datos.madrid.es/portal/site/egob/menuitem.c05c1f754a33a9fbe4b2e4b284f1a5a0/?vgnextoid=fa3881ac7ad6b410VgnVCM2000000c205a0aRCRD&vgnextchannel=374512b9ace9f310VgnVCM100000171f5a0aRCRD">Bomberos: Parques de bomberos</a></td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td><a href="http://datos.madrid.es/portal/site/egob/menuitem.c05c1f754a33a9fbe4b2e4b284f1a5a0/?vgnextoid=41e01e007c9db410VgnVCM2000000c205a0aRCRD&vgnextchannel=374512b9ace9f310VgnVCM100000171f5a0aRCRD&vgnextfmt=default">Calidad del aire: Datos en tiempo rea</a>l</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td><a href="http://datos.madrid.es/portal/site/egob/menuitem.c05c1f754a33a9fbe4b2e4b284f1a5a0/?vgnextoid=9e42c176313eb410VgnVCM1000000b205a0aRCRD&vgnextchannel=374512b9ace9f310VgnVCM100000171f5a0aRCRD">Calidad del aire: Estaciones de control</a></td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td><a href="http://datos.gob.es/es/catalogo/l01280796-parques-y-jardines">Parques y jardines - Ayuntamiendo de Madrid</a></td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td><a href="http://datos.gob.es/es/catalogo/l01280796-fuentes-de-agua-potable">Fuentes de Agua Potable para Beber - Ayuntamiento Madrid</a></td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td><a href="http://datos.gob.es/es/catalogo/l01280796-inventario-de-zonas-verdes">Inventario zonas verdes - Ayuntamiento de Madrid</a></td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>✔</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+</table>
 <h3>Licenses of selected datasets</h3>
 
-<p><a href=http://datos.gob.es/es/catalogo/l01280796-fuentes-de-agua-potable>Drinkable Fountains in Madrid</a>  <a href="http://datos.madrid.es/egob/catalogo/aviso-legal"> Licence (in Spanish)</a> </p>
+<p><a href=http://datos.gob.es/es/catalogo/l01280796-fuentes-de-agua-potable>Drinkable Fountains in Madrid</a>  <a href="http://datos.madrid.es/egob/catalogo/aviso-legal"> Licence (in Spanish)</a></p>
+<p><a href="http://datos.madrid.es/portal/site/egob/menuitem.400a817358ce98c34e937436a8a409a0/?vgnextoid=b4c412b9ace9f310VgnVCM100000171f5a0aRCRD">Datos Mardid open licences</a></p>
 
 
 <h3> Entities in the selected datasets that can be linked with entities in other datasets </h3>
 
-<p> TO DO</p>	
+<p> - Longitude and Latitude + Address</p>
+<p>- Data fields between &quot;Calidad del Aire&quot; datasets</p>
+<p>- </p>	
 
 
 <h3> Entities in other datasets that can be linked with entities in the selected datasets </h3> 
 
 <p> Information in real time about active fires from <a href="https://earthdata.nasa.gov/earth-observation-data/near-real-time/firms/active-fire-data">https://earthdata.nasa.gov/earth-observation-data/near-real-time/firms/active-fire-data</a> </p>
-
-
+<p>OpenStreetMap allow us to show in the map the latitude + longitud or address of the selected datasets <a href="http://wiki.openstreetmap.org/wiki/API">http://wiki.openstreetmap.org/wiki/API</a></p>
 </body>
 </html>
