--- a/HandsOn/Group07/requirements/applicationRequirements.html
+++ b/HandsOn/Group07/requirements/applicationRequirements.html
@@ -9,6 +9,13 @@
 	<li>Calcular el camino óptimo entre dos puntos en autobús y/o en biclieta</li>
 	<li>Calcular el camino más económico entre dos puntos en autobús y/o en bicicleta</li>
 	<li>Calcular el camino con menor consumo de CO2 entre dos puntos en autobús y/o en bicicleta</li>
+	<br>
+	<br>
+	<img src="1_general.png" alt="">
+	<img src="2_autobuses.png" alt="">
+	<img src="3_bicicletas.png" alt="">
+	<img src="4_mix.png" alt="">
+	<img src="5_ejemplo_indicaciones.png" alt="">
 </ul>
 </body>
 </html> 
