--- a/HandsOn/Group14/requirements/datasetRequirements.html
+++ b/HandsOn/Group14/requirements/datasetRequirements.html
@@ -27,7 +27,7 @@
 	</tr>
 	<tr>
 		<td>R5. Documentation exists for the data (optional).</td>
-		<td>La documentacion que hemos nos proporciona la pagina 
+		<td>La documentacion que nos proporciona la pagina 
 		<a href="http://datos.madrid.es/portal/site/egob/menuitem.3efdb29b813ad8241e830cc2a8a409a0/?vgnextoid=108804d4aab90410VgnVCM100000171f5a0aRCRD&vgnextchannel=b4c412b9ace9f310VgnVCM100000171f5a0aRCRD&vgnextfmt=default">Documentacion</a>
 		</td>
 	</tr>
