--- a/HandsOn/Group08/analysis.html
+++ b/HandsOn/Group08/analysis.html
@@ -1,12 +1,30 @@
 <html>
+	
 	<head>
-		<title>Dataset Requirements</title>
+		<title>
+			Documento de Analisis
+		</title>
 	</head>
+	
 	<body>
-  <p>
-  Potencial License
-  Attribution Non-Commercial (CC BY-NC)
-  </p>
-  
-  </body>
+		<h1> 
+			Documento de Análisis.
+		</h1>
+        
+    <h2>
+    	Analisis de la licencia de datos:
+    </h2>
+		<ol>
+			<li><strong>Who is the publisher and the rightsholder?</strong></li>
+				Ayuntamiento de Madrid.<br>
+			<li><strong>What is the licence?</strong></li>
+				Es una licencia que permite el uso comercial y no-comercial de los datos contenidos, siempre y    cuando su uso no constituya una actividad administrativa pública.<br>
+			<li><strong>Which will be the license to be used for the generated dataset?</strong></li>
+				Licencia CC-BY-NC.<br>
+		</ol>
+		
+		
+		
+	</body>
+	
 </html>
