--- a/HandsOn/Group08/analysis.html
+++ b/HandsOn/Group08/analysis.html
@@ -18,7 +18,8 @@
 			<li><strong>Who is the publisher and the rightsholder?</strong></li>
 				Ayuntamiento de Madrid.<br>
 			<li><strong>What is the licence?</strong></li>
-				Es una licencia que permite el uso comercial y no-comercial de los datos contenidos, siempre y    cuando su uso no constituya una actividad administrativa pública.<br>
+				Es una licencia que permite el uso comercial y no-comercial de los datos contenidos, siempre y 
+				cuando su uso no constituya una actividad administrativa pública.<br>
 			<li><strong>Which will be the license to be used for the generated dataset?</strong></li>
 				Licencia CC-BY-NC.<br>
 		</ol>
