--- a/HandsOn/Group18/analysis.html
+++ b/HandsOn/Group18/analysis.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Group 18</title>
+<meta charset="utf-8">  
 <body>
 
 <div>
@@ -137,10 +138,38 @@
 
 
 	<h1>Analyse Licensing of the Data Source</h1>
+	<p>Tal y como se indica en el siguiente documento: <a href="http://cirb.brussels/fr/nos-solutions/urbis-solutions/licence-urbis-open-data"> Brussels OpenData License</a>, siempre y cuando se menciona al menos al autor de la fuente de información, siendo recomendable mencionar además la fuente y la fecha de su última modificación, cualquier persona es libre de realizar los siguientes puntos:
+    <ul>
+        <li>Reproducir, copiar, publicar y transmitir la Información</li>
+        <li>Diseminar y redistribuir la información</li>
+        <li>Adaptar, modificar, extraer y transformar de Información en otra derivada </li>
+        <li>Usar con fines comerciales la información</li>
+    </ul>
+    La totalidad de la información pertenecerá al autor de esa fuente, asegurando que no se vulnera la propiedad intelectual de terceros, pero en ningun caso se asegura la total fiabilidad de la misma.
+    Esta se rige bajo la ley belga, siendo compatible con la licencia abierta del gobierno de Reino Unido (OGL).
+    </p>
 	
-	
+
     <h1>Define Resource Naming Strategy</h1>
-        
+    <ul>
+    <li>Domain:</li>
+    http://www.semanticweb.org/grupo20/
+    </ul> 
+    <ul>
+    <li>Ontological terms path:</li>
+    http://www.semanticweb.org/grupo20/ontologies#
+    </ul>
+    <ul>
+    <li>Individuals path:</li> 
+    http://www.semanticweb.org/grupo20/resources/
+    </ul>
+    <ul> 
+    <li>Ontological terms pattern:</li>
+    http://www.semanticweb.org/grupo20/ontologies#&lt;term_name&gt;
+    </ul>
+    <ul>
+    <li>Individuals pattern:</li>
+    http://www.semanticweb.org/grupo20/resources/&lt;resource_type&gt;/&lt;resource_name&gt;
 
         
     </div>    
