Estrategia de nombrado de recursos

--- a/HandsOn/Group08/analysis.html
+++ b/HandsOn/Group08/analysis.html
@@ -359,7 +359,17 @@
         <td>Tipo de audencia para el evento</td>
      </tr>
     </table>
+
+    <h2>
+    	3. Estrategia de nombrado de recursos:
+    </h2>
 		
+    <ol>
+			<li>Entidades de la ontología: http://semanticweb.org/group08/ontologies/</li>
+			<li>Nomencaltura de los recursos de la ontologia: http://semanticweb.org/group08/ontologies#resource</li>
+			<li>Nomenclatura de individuos: http://semanticweb.org/group08/ontologies/individuo</li>
+		</ol>
+
 	</body>
 	
 </html>
