Updated the resource naming strategy

--- a/HandsOn/Group14/analysis.html
+++ b/HandsOn/Group14/analysis.html
@@ -573,9 +573,15 @@
 					<H3>Resource Naming Strategy</H3>
 					
 
-							The url-pattern of the URI that We've choosen: <A HREF="www.......es/.../">www...../.es/...</A> <!--  revisar-->
-							<P>
-							The following URI's, were selected to describe the entities
+							The url-pattern of the URI that We've choosen: <a HREF="http://www.semanticweb.org/group14/">http://www.semanticweb.org/group14/</a>
+							<p>The following URI's, were selected to describe the entities:</p>
+							<ul>
+						       <li><b>Domain: </b>http://www.semanticweb.org/group14/</li>
+						       <li><b>Individuals path: </b>http://www.semanticweb.org/group14/resource/</li>
+						       <li><b>Individuals pattern: </b>http://www.semanticweb.org/group14/&lt;resource_type&gt;/&lt;resource_name&gt;</li>
+						       <li><b>Ontological terms path: </b>http://www.semanticweb.org/group14/ontology/LugaresDeInteres#</li>
+						       <li><b>Ontological terms pattern: </b>http://www.semanticweb.org/group14/ontology/LugaresDeInteres#&lt;term_name&gt;</li>
+						    </ul>
 					
 			
 
