Updated the resource naming strategy

--- a/HandsOn/Group14/analysis.html
+++ b/HandsOn/Group14/analysis.html
@@ -578,9 +578,9 @@
 							<ul>
 						       <li><b>Domain: </b>http://www.wsdlfiupm.es/resources/group14/</li>
 						       <li><b>Individuals path: </b>http://www.wsdlfiupm.es/resources/group14/</li>
-						       <li><b>Individuals pattern: </b>http://www.wsdlfiupm.es/resources/group14/tipos/&lt;type&gt;/&lt;resource_name&gt;</li>
-						       <li><b>Ontological terms path: </b>http://www.wsdlfiupm.es/resources/group14/ontology/Place#</li>
-						       <li><b>Ontological terms pattern: </b>http://www.wsdlfiupm.es/resources/group14/ontology/Place#&lt;term_name&gt;</li>
+						       <li><b>Individuals pattern: </b>http://www.wsdlfiupm.es/resources/group14/&lt;tipo&gt;/&lt;nombre_recurso&gt;</li>
+						       <li><b>Ontological terms path: </b>http://www.wsdlfiupm.es/resources/group14/ontology/Lugar#</li>
+						       <li><b>Ontological terms pattern: </b>http://www.wsdlfiupm.es/resources/group14/ontology/Lugar#&lt;nombre&gt;</li>
 						    </ul>
 					
 			
