añadido parte de la estrategia de nombrado de recursos

--- a/HandsOn/Group07/analysis.html
+++ b/HandsOn/Group07/analysis.html
@@ -28,7 +28,15 @@
 		<li> • geometry: Muestra las coordenadas de una marquesina. -- >	Tipo de datos: float</li>
 		<li> • link: Muestra un enlace para el visionado en web de la información de la marquesina. -- > 	Tipo de datos: URI</li>
 		<li> • icon: Muestra un enlace al icono de un autobus. -- > 	Tipo de datos: URI</li>
+	<h2> Resource Naming Strategy</h2>
+	<p> A continuación, se detalla la estrategia de nombrado de recursos <p>
+		<ul>
+			<li>Dado que se espera tener una gran cantidad de datos, utilizaremos slash URIS. </li>
+
+			<li>El tipo de negociación de contenido será redirigiendo a diferentes documentos, ya que creemos que es más sencillo de esta forma. </li>
+			<li>El dominio de las URI será... </li>
 	
+		</ul>
 </body>
 </html>
 
