We are group 18 and reestructured html

--- a/HandsOn/Group18/analysis.html
+++ b/HandsOn/Group18/analysis.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html> <head>
 <title>Group 18</title>
-<meta charset="utf-8">  
+<meta charset="utf-8"> 
+<style type="text/css">
+		
+	table {
+   width: 100%;
+   border: 1px solid #000;
+
+	}
+
+	th, td {
+	   width: 25%;
+	   text-align: left;
+	   vertical-align: top;
+	   border: 1px solid #000;
+	   border-spacing: 0;
+	}
+
+</style>
+</head>
 <body>
 
 <div>
@@ -11,23 +29,6 @@
     <ul>
     <li><b>Nombre del fichero:</b>parkingpublic-2016-01-01.csv</li>
 	</ul>
-	<style type="text/css">
-		
-	table {
-   width: 100%;
-   border: 1px solid #000;
-
-	}
-	th, td {
-   		   width: 25%;
-   text-align: left;
-   vertical-align: top;
-   border: 1px solid #000;
-   border-spacing: 0;
-	}
-
-	</style>
-	
 
     <table>
             <tr >
@@ -153,23 +154,23 @@
     <h1>Define Resource Naming Strategy</h1>
     <ul>
     <li>Domain:</li>
-    http://www.semanticweb.org/grupo20/
+    http://www.semanticweb.org/grupo18/
     </ul> 
     <ul>
     <li>Ontological terms path:</li>
-    http://www.semanticweb.org/grupo20/ontologies#
+    http://www.semanticweb.org/grupo18/ontologies#
     </ul>
     <ul>
     <li>Individuals path:</li> 
-    http://www.semanticweb.org/grupo20/resources/
+    http://www.semanticweb.org/grupo18/resources/
     </ul>
     <ul> 
     <li>Ontological terms pattern:</li>
-    http://www.semanticweb.org/grupo20/ontologies#&lt;term_name&gt;
+    http://www.semanticweb.org/grupo18/ontologies#&lt;term_name&gt;
     </ul>
     <ul>
     <li>Individuals pattern:</li>
-    http://www.semanticweb.org/grupo20/resources/&lt;resource_type&gt;/&lt;resource_name&gt;
+    http://www.semanticweb.org/grupo18/resources/&lt;resource_type&gt;/&lt;resource_name&gt;
 
         
     </div>    
