--- a/HandsOn/Group03/requirements/datasetRequirements.html
+++ b/HandsOn/Group03/requirements/datasetRequirements.html
@@ -23,7 +23,7 @@
 	</li>
 	<li style="line-height: 20px;">R5. Documentation exists for the data (optional).
 	<ul>
-		<li style="line-height: 20px;">Si, se puede encontrar en:&nbsp;http://datos.madrid.es/FWProjects/egob/contenidos/datasets/ficheros/Estructura_conjunto_datos_www%20madrid%20es_v7.pdf</li>
+		<li style="line-height: 20px;">Si, se puede encontrar en: http://datos.madrid.es/FWProjects/egob/contenidos/datasets/ficheros/Estructura_%20datos_plazas_SER.pdf y en http://datos.madrid.es/FWProjects/egob/contenidos/datasets/ficheros/Estructura_%20datos_plazas%20PMR.pdf </li>
 	</ul>
 	</li>
 	<li style="line-height: 20px;">R6.&nbsp; Data can come from multiple data sources (optional).</li>
