--- a/HandsOn/Group05/old/requirements/datasetRequirements.html
+++ b/HandsOn/Group05/old/requirements/datasetRequirements.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<meta charset="UTF-8" />
-	<title>Requisitos dataset farmacias</title>
+	<title>Group 05 Dataset requirements</title>
 	<head>
 		<style type="text/css">
 		</style>
