--- a/HandsOn/Group19/requirements/applicationRequirements.html
+++ b/HandsOn/Group19/requirements/applicationRequirements.html
@@ -9,10 +9,10 @@
 		<p>Nuestra aplicación tomará el histórico de datos referente a la contaminación acústica en la ciudad de Madrid.</p>
 		
 		<ul>
-			<li>Al usuario se le presentará un mapa del ruido para las zonas estudiadas haciendo uso del histórico de datos </li>
-			<li>El usuario podrá elegir ver datos filtrando por zona</li>
-			<li> Podrá también ver  estadísticas de la progresión y cambio en los valores para un cierto periodo de tiempo escogido</li>
-			<li>Además, podrá solicitar una estimación de valores de contaminación acústica para una zona concreta basándose en un número de meses anteriores escogido</li>
+			<li>Al usuario se le presentará un mapa del ruido mensual para las zonas estudiadas haciendo uso del histórico de datos  </li>
+			<li> Podrá también ver  estadísticas por mes en las que se le muestre cual ha sido el mes más y menos ruidoso, así como la media de ruido mensual. </li>
+			<li> Se le mostrará además la información estadística relativa a la presión sonora. </li>
+			
 		</ul>
 	</body>
 </html>
