Assignment 5, incorporación de nuevo dataset y actualización de anteriores assignments.

--- a/HandsOn/Group21/analysis.html
+++ b/HandsOn/Group21/analysis.html
@@ -28,6 +28,7 @@
 <body>
     <div class="container">
         <h3>Analysis of Data Set</h3>
+        <h4>Availability</h4>
         <table>
             <thead>
                 <tr>
@@ -79,6 +80,62 @@
                     <td>Integer</td>
                     <td>[0 - n]</td>
                     <td>Uses of occasional subscription</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Stations</h4>
+        <table>
+            <thead>
+                <tr>
+                    <th>Column Name</th>
+                    <th>Type</th>
+                    <th>Value Range</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Identification</td>
+                    <td>String</td>
+                    <td>[0-9 a-Z]</td>
+                    <td>Identification of the stations</td>
+                </tr>
+                <tr>
+                    <td>Register Date</td>
+                    <td>Date (dd/mm/yyyy)</td>
+                    <td>[01/01/2000 - 31/12/2017]</td>
+                    <td>Hours of use</td>
+                </tr>
+                <tr>
+                    <td>District</td>
+                    <td>String</td>
+                    <td>[0-9 a-Z]</td>
+                    <td>District where is the station</td>
+                </tr>
+                <tr>
+                    <td>Zone</td>
+                    <td>String</td>
+                    <td>[0-9 a-Z]</td>
+                    <td>Zone where is the station</td>
+                </tr>
+                <tr>
+                    <td>Address</td>
+                    <td>String</td>
+                    <td>[0-9 a-Z]</td>
+                    <td>Station's Address</td>
+                </tr>
+                <tr>
+                    <td>Number</td>
+                    <td>Integer</td>
+                    <td>[0 - n]</td>
+                    <td>Address number</td>
+                </tr>
+                <tr>
+                    <td>Number of Places</td>
+                    <td>Integer</td>
+                    <td>[0 - n]</td>
+                    <td>Number of spaces in the station</td>
                 </tr>
             </tbody>
         </table>
