--- a/HandsOn/Group01/requirements/applicationRequirements.html
+++ b/HandsOn/Group01/requirements/applicationRequirements.html
@@ -12,7 +12,7 @@
 	<body>
 		<h2>Requisitos de la aplicación</h2>
 		<h3>Descripción General</h3>
-		<p>La aplicación que utilizará los datos presentes en los dataets recogidos, así como también los datos de los dataset con lo que se lincarán, está orientada al ámbito de la búsqueda de centros deportivos . Se pretende con la aplicación que el usuario encuentre el centro deportivo mas cercano a el.</p>
+		<p>La aplicación que utilizará los datos presentes en los datasets recogidos, así como también los datos de los datasets con lo que se lincarán, está orientada al ámbito de la búsqueda de centros deportivos . Se pretende con la aplicación que el usuario encuentre el centro deportivo mas cercano a el.</p>
 
 		<h3>Application Requirements</h3>
 		<ul>
